Fixed the text alignment issue

--- a/css/theme-lava.css
+++ b/css/theme-lava.css
@@ -284,6 +284,7 @@ h3 {
 p {
   font-size: 14px;
   line-height: 24px;
+  text-align: justify;
 }
 p:last-child {
   margin-bottom: 0px;
